--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "debug": "^2.6.3",
+    "gm": "^1.23.0",
+    "iconv-js": "^0.3.5",
+    "iconv-lite": "^0.4.18",
     "koa": "^2.2.0",
     "koa-bodyparser": "^3.2.0",
     "koa-convert": "^1.2.0",
@@ -19,6 +23,7 @@
     "koa-router": "^7.1.1",
     "koa-static": "^3.0.0",
     "koa-views": "^5.2.1",
+    "moment": "^2.18.1",
     "pug": "^2.0.0-rc.1"
   },
   "devDependencies": {
